--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-gear</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/f6ab4d6246.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header></header>
+    <!-- ====header====== -->
+    <header>
+        <div class="container">
+             <!-- NAV -->
+            <nav>
+                <h3 class="nav-title">Influencer products</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                </ul>
+            </nav>
+
+            <!-- banner -->
+            <div class="banner">
+                <div class="banner-container">
+                    <h1 class="banner-title">Start your Journey as <br>Influencer</h1>
+                    <p class="banner-detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="btn-primary">Preebook now<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/main-camera.png">
+                </div>
+            </div>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
