--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                 </ul>
             </nav>
-
             <!-- banner -->
             <div class="banner">
                 <div class="banner-container">
@@ -34,8 +33,19 @@
                     <img src="./images/main-camera.png">
                 </div>
             </div>
+            <div class="banner-logos">
+                <img src="./logos/Alibaba.svg" alt="">
+                <img src="./logos/Amazon.svg" alt="">
+                <img src="./logos/Daraz.pk.svg" alt="">
+                <img src="./logos/Ebay.svg" alt="">
+                <img src="./logos/Rakuten.svg" alt="">
+                <img src="./logos/Target.svg" alt="">
+                <img src="./logos/Walmart.svg" alt="">
+            </div>
         </div>
     </header>
+
+    <!------- main start ---------->
     <main></main>
     <footer></footer>
 </body>
