--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div class="banner-img">
                     <img src="./images/main-camera.png">
                 </div>
+            <!-- logos -->
             </div>
             <div class="banner-logos">
                 <img src="./logos/Alibaba.svg" alt="">
@@ -45,8 +46,122 @@
         </div>
     </header>
 
-    <!------- main start ---------->
-    <main></main>
+    <!-- ===============main start============= -->
+    <main>
+        <div class="container">
+            <h3>Popular Collection</h3>
+            <section class="img-detail">
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/tripod.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Flex Tripod</h5>
+                        <h6 class="card-price">$50.48</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/airpod.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Airbuds</h5>
+                        <h6 class="card-price">$100.00</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/mic.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">microphone</h5>
+                        <h6 class="card-price">$120.25</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/drone.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Drone</h5>
+                        <h6 class="card-price">$980.25</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/lights.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Light Setup</h5>
+                        <h6 class="card-price">$1200.00</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/setup.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Photoshoot set</h5>
+                        <h6 class="card-price">$820.40</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/camera.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Vlogging Camera</h5>
+                        <h6 class="card-price">$1800.80</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/single-light.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Green Screen</h5>
+                        <h6 class="card-price">$25.48</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+                <div class="card-1">
+                    <div class="card-img">
+                        <img src="./images/action.png">
+                    </div>
+                    <div class="card-container">
+                        <h5 class="card-title">Action Camera</h5>
+                        <h6 class="card-price">$380.00</h6>
+                        <p class="card-title">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+
+
+            </section>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
