--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/airpod.png">
@@ -74,7 +73,6 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/mic.png">
@@ -86,7 +84,6 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/drone.png">
@@ -97,8 +94,7 @@
                         <p class="card-title">Wordwide shifting available
                             Buyers protection possible!</p>
                     </div>
-                </div>
-                
+                </div>  
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/lights.png">
@@ -110,7 +106,6 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/setup.png">
@@ -122,7 +117,6 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/camera.png">
@@ -145,7 +139,6 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
                 <div class="card-1">
                     <div class="card-img">
                         <img src="./images/action.png">
@@ -157,11 +150,21 @@
                             Buyers protection possible!</p>
                     </div>
                 </div>
-
-
+            </section>
+            <!-- feature -->
+            <section class="feature">
+                <div class="feature-img">
+                    <img src="./images/gear.png">
+                </div>
+                <div class="feature-container">
+                    <h2>Featured products at one place</h2>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn-primary">Join Now<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
             </section>
         </div>
     </main>
+    <!-- ==============Footer start============= -->
     <footer></footer>
 </body>
 </html>
