--- a/index.html
+++ b/index.html
@@ -165,6 +165,17 @@
         </div>
     </main>
     <!-- ==============Footer start============= -->
-    <footer></footer>
+    <footer>
+        <div class="foot-container">
+            <h3 class="footer-title">Influencer products</h3>
+            <p class="footer-detail">Copyright © 2020  influencer products <br>All rights reserved</p>
+            <div class="icon">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
